--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^7.0.2",
     "rsuite": "^5.74.2"
   },
   "devDependencies": {
